--- a/css/bates.css
+++ b/css/bates.css
@@ -1,21 +1,26 @@
 h5[class*=" bg-"],
 h5[class^="bg-"] {
-		padding: 10px 0;
+  padding: 10px 0;
 }
 
 /* homepage changes */
 .homepage ul {
-		font-size: 18px;
-		font-weight: bold;
-		list-style: none;
-		padding-top: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  list-style: none;
+  padding-top: 30px;
 }
 
 .homepage li {
-		padding-top: 15px;
+  padding-top: 15px;
 }
 
 .login p.username,
 .login p.text-danger {
   margin-top: 30px;
+}
+
+.reserve .room {
+  display: block;
+  width: 100%;
 }
